--- a/hotel/style.css
+++ b/hotel/style.css
@@ -57,7 +57,7 @@ nav {
     letter-spacing: 1px;
     padding: 25px;
     width: 100vw;
-    background: rgb(250 250 250 / 50%);
+    background: #121212;
 }
 
 a {
